--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-dark">
+<body class="bg-dark" id="homepage">
 
       <div id="nav" class="row sticky-top">
           <homepage-navbar></homepage-navbar>
@@ -156,6 +156,6 @@
     <script src="homepageNavBar.js"></script>
 
     <!-- js import -->
-    <script src="./trips-homepage.js"></script>
+    <script type="module" src="./trips-homepage.js"></script>
 </body>
 </html>
