dynamic homepage pls

--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -37,7 +37,7 @@
 
       <!-- body -->
       <div class="container-fluid">
-        <div class="row p-3 d-flex justify-content-center">
+        <div class="row p-3 d-flex justify-content-center" id="cards">
           
           <div class="card cardstyle" >
             <img src="../../images/home_page/trips_imgs/seoul.jpg" class="card-img-top" height="200px">
