--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -41,7 +41,7 @@
             <!-- ALL OTHER CONTENT -->
             <div class="col py-3">
                 <!-- CREATE NEW ACCOMMODATION BUTTON -->
-                <div class="row justify-content-end mb-3">
+                <div class="row justify-content-start mb-4 mt-3">
                     <div class="col-md-3 col-lg-2 d-flex justify-content-center">
                         <button type="button" class="btn btn-main dropshadow-btn-main" @click="enable_create_mode()" :disabled="create_new_accom || edit_existing_accom">Create New</button>
                     </div>
@@ -375,6 +375,12 @@
                             </div>
                         </form>
                     </div>
+                </div>
+
+                <!-- TRIP DETAILS -->
+                <div class="trip-title-top-md d-none d-md-block">
+                    <h5>Name of Trip (Trip to Seoul, Korea)</h5>
+                    <p>1 December 2022 - 10 December 2022</p>
                 </div>
             </div>
         </div>
