--- a/templates/template.css
+++ b/templates/template.css
@@ -195,3 +195,25 @@ img.create-trip-main-img{
     height: 100vh;
     overflow: hidden;
 }
+
+
+/* top trip title bar */
+.trip-title-top-md{
+    position: fixed !important;
+    top: 0 !important;
+    right: 0 !important;
+    background: rgba(255, 255, 255, 0.85) !important;
+    width: auto !important;
+    border-radius: 0 0 0 1em !important;
+    padding: 10px 10px 0px 20px !important;
+}
+
+.spending-bottom-md{
+    position: fixed !important;
+    bottom: 0 !important;
+    right: 0 !important;
+    background: rgba(255, 255, 255, 0.85) !important;
+    width: auto !important;
+    border-radius: 1em 0 0 0 !important;
+    padding: 10px 10px 0px 20px !important;
+}
