--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -39,7 +39,13 @@
             </div>
 
             <!-- ALL OTHER CONTENT -->
-            <div class="col py-3">
+            <div class="col py-md-3 py-0">
+                <!-- TRIP DETAILS (SM) -->
+                <div class="row d-block d-md-none text-center blurred">
+                    <h5 class="pt-3">Name of Trip (Trip to Seoul, Korea)</h5>
+                    <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
+                </div>
+
                 <!-- CREATE NEW ACCOMMODATION BUTTON -->
                 <div class="row justify-content-start mb-4 mt-3">
                     <div class="col-md-3 col-lg-2 d-flex justify-content-center">
