--- a/templates/select_activities_page/select_activities_page_STYLING.html
+++ b/templates/select_activities_page/select_activities_page_STYLING.html
@@ -47,6 +47,12 @@
 
             <!-- rest of site -->
             <div class="col text-light" style="overflow: hidden;">
+                <!-- TRIP DETAILS (SM) -->
+                <div class="row d-block d-md-none text-center blurred text-black">
+                    <h5 class="pt-3">Name of Trip (Trip to Seoul, Korea)</h5>
+                    <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
+                </div>
+
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <h3 class="ms-md-3 mt-4 text-md-start text-center">Trip leader, please select the confirmed activities </h3>
