moved the mount to somewhere else

--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-dark" id="homepage">
+<body class="bg-dark">
 
       <div id="nav" class="row sticky-top">
           <homepage-navbar></homepage-navbar>
@@ -36,13 +36,13 @@
       </div>
 
       <!-- body -->
-      <div class="container-fluid">
+      <div class="container-fluid" id="homepage">
         <div class="row p-3 d-flex justify-content-center" id="cards">
           
           <div class="card cardstyle" >
             <img src="../../images/home_page/trips_imgs/seoul.jpg" class="card-img-top" height="200px">
             <div class="card-body">
-              <h5 class="card-title">Dec22 Seoul Trip!</h5>
+              <h5 class="card-title"> Dec22 Seoul Trip!</h5>
               <button href="#" class="btn btn-main-bold">Edit Trip</a>
             </div>
             <div class="card-footer text-muted">
