Fucking finally (can get trip objects from database for homepage)

--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-dark" id="homepage">
+<body class="bg-dark">
 
       <div id="nav" class="row sticky-top">
           <homepage-navbar></homepage-navbar>
@@ -36,7 +36,7 @@
       </div>
 
       <!-- body -->
-      <div class="container-fluid">
+      <div class="container-fluid" id="homepage">
         <div class="row p-3 d-flex justify-content-center" id="cards">
           
           <div class="card cardstyle" >
