Edit homepage javascript to get tri objects

--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -14,6 +14,14 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- Axios -->
     <script src='https://unpkg.com/axios/dist/axios.js'></script>
+
+    <style>
+        body{
+            background-image: url("../../images/home_page/main_images/main_page_bg_1.jpg");
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
     
 <!-- need FIREBASE function READ -->
 
@@ -22,15 +30,28 @@
 <body>
     <div class="container-fluid">
         <div class="row sidebar-parent flex-nowrap">
-            <div id="nav" class="col-auto sidebar-css">
+            <!-- sidebar -->
+            <div id="nav" class="col-auto sidebar-css p-0 blurred-minor-2">
                  <!-- SIDEBAR  -->
                 <sidebar-phase2></sidebar-phase2>
             </div>
 
+            <!-- TRIP INFO -->
+            <div class="trip-title-top-md d-none d-md-block" style="z-index: 1;">
+                <h6>Name of Trip (Trip to Seoul, Korea)</h6>
+                <p>1 December 2022 - 10 December 2022</p>
+            </div>
+
             <!-- rest of site -->
             <div class="col p-4" id="main">
+
+                <!-- TRIP DETAILS (SM) -->
+                <div class="row d-block d-md-none text-center blurred text-black">
+                    <h5 class="pt-3">Name of Trip (Trip to Seoul, Korea)</h5>
+                    <p class="m-0 pb-3">1 December 2022 - 10 December 2022</p>
+                </div>
+
                 <div class="row">
-                    
                     <!-- pop up if edit activity -->
                     <div :style="{display: d_edit()}" class="col py-3">
                         <div class="container text-dark">
