--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -142,12 +142,16 @@
       </div>
 
     <script>
-      function edit_trip(tripID) {
+      function edit_trip(trip_ID, trip_start_date, trip_end_data, trip_destination) {
         console.log("button working")
-        localStorage.setItem("trip", tripID)
-        location.href("../../map_phase2.html")
+        localStorage.setItem("trip", trip_ID)
+        localStorage.setItem("trip_start_date", trip_start_date)
+        localStorage.setItem("trip_end_date", trip_end_data)
+        localStorage.setItem("destination", trip_destination)
+        location.href = "../../map_phase2.html"
 		  }
     </script>
+
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
     <!-- Font Awesome JS -->
     <script src="https://kit.fontawesome.com/c7ddd7a650.js" crossorigin="anonymous"></script>
