--- a/templates/pages/edit_trip_name/edit_trip_name.html
+++ b/templates/pages/edit_trip_name/edit_trip_name.html
@@ -91,10 +91,10 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <!-- Refer to my own external JS -->
-    <script src="../sidebars.js"></script>
+    <script type="module" src="../sidebars.js"></script>
 
     <!-- access firebase -->
-    <script type="module" src="edit_trip_name_CRUD_database.js"></script>
+    <script src="edit_trip_name_CRUD_database.js"></script>
 
 </body>
 </html>
