--- a/templates/pages/edit_trip_name/edit_trip_name.html
+++ b/templates/pages/edit_trip_name/edit_trip_name.html
@@ -94,7 +94,7 @@
     <script type="module" src="../sidebars.js"></script>
 
     <!-- access firebase -->
-    <script src="edit_trip_name_CRUD_database.js"></script>
+    <script type="module" src="edit_trip_name_CRUD_database.js"></script>
 
 </body>
 </html>
