--- a/templates/template.css
+++ b/templates/template.css
@@ -217,4 +217,5 @@ img.create-trip-main-img{
     width: auto !important;
     border-radius: 1em 0 0 0 !important;
     padding: 10px 10px 0px 20px !important;
+    color:black;
 }
