edited create trip to push collaborators correctly

--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -110,7 +110,7 @@
 
                                         <ul class="list-group">
                                             <li class="list-group-item" v-for="collaborator in collaborators">
-                                              <input class="form-check-input me-1" type="checkbox" :value="collaborator" :id="collaborator" v-model="nameList">
+                                              <input class="form-check-input me-1" type="checkbox" :value="collaborator" :id="collaborator" v-model="collaborators">
                                               <label class="form-check-label" for="firstCheckbox"> {{collaborator}}</label>
                                             </li>
                                         </ul>
