Made styling edits to map phase 3

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,8 @@ $danger:        #9D2D08;
 $light:         #ffffff;
 $dark:          #0a4a48;
 
+$font-size-base:                  0.90rem;
+
 //customer buttons
 $btn-hover-bg-shade-amount:       25%;
 $btn-hover-bg-tint-amount:        20%;
