--- a/templates/template.css
+++ b/templates/template.css
@@ -148,6 +148,12 @@ div#animated-text{
     border: 0 !important;
 }
 
+.blurred-primary{
+    backdrop-filter: blur(25px) !important;
+    background-color: #24a19d77 !important;
+    border: 0 !important;
+}
+
 .blurred-minor-no-bd-filter{
     background:  rgba(255, 255, 255, 0.5) !important;
     border: 0 !important;
@@ -218,4 +224,9 @@ img.create-trip-main-img{
     border-radius: 1em 0 0 0 !important;
     padding: 10px 10px 0px 20px !important;
     color:black;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
 }
