--- a/templates/lodging/lodging_phase2.html
+++ b/templates/lodging/lodging_phase2.html
@@ -383,6 +383,13 @@
                     </div>
                 </div>
 
+                <!-- IF YOU HAVE NO LODGING -->
+                <div v-if="accom_obj_arr.length == 0" style="height: 70vh;" class="d-flex align-items-center">
+                    <h3 class="text-center text-white" style="width: 100%;">
+                        You have no accomodations planned yet.<br><br>Click "Create New" to add a new accomodation!
+                    </h3>
+                </div>
+
                 <!-- TRIP DETAILS -->
                 <div class="trip-title-top-md d-none d-md-block">
                     <h5>Name of Trip (Trip to Seoul, Korea)</h5>
